<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="nulo"></string>
    <string name="app_name">Vive 2013</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_donar">Donar</string>
    <string name="menu_sim">Simbologia</string>
    <string name="title_activity_lugar">Mapa</string>
    <string name="title_activity_info">Boletos</string>
    <string name="title_activity_bandas">Bandas</string>
    <string name="title_activity_acerca">Acerca de</string>
    <string name="dia1">jueves 14</string>
    <string name="dia2">viernes 15</string>
    <string name="dia3">sábado 16</string>
    <string name="dia4">domingo 17</string>
    <string name="acerca">
<![CDATA[
        	<html>
 			<head></head>
 			<body style="text-align:justify;color:white;background-color:#000000;">
 				<p>Vive 2013 es una aplicaci&oacute;n <font color="red">NO</font> oficial con fines &uacute;nicamente informativos para el Festival Vive Latino 2013. Toda la informaci&oacute;n aqu&iacute; mostrada es de dominio p&uacute;blico, la aplicaci&oacute;n no tiene otra intenci&oacute;n m&aacute;s que hacer llegar la informaci&oacute;n a los asistentes e interesados en este evento.</p>
 				<p>Desarrollada por:</p>
 				<ul>
 					<li>Erick Chias (@erickchias)</li>
 					<li>Divani Fuentes (@Divarolas)</li>
 				</ul>
 				<p>Si te gusta nuestro trabajo puedes comprarnos una cerveza :)</p>
 				<p>Iconos en el mapa tomados de <a href="http://mapicons.nicolasmollet.com">mapicons collection</a></p>
 				<p>Las im&aacute;genes e informaci&oacute;n aqu&iacute; mostradas fueron tomadas de internet, de caracter p&uacute;blico y sin fines de lucro.</p>
 				<p>La aplicaci&oacute;n y los desarrolladores no son responsables por cualquier cambio de horario o imprevisto con las bandas y eventos por desici&oacute;n de sus organizadores.</p>
 			</body>
			</html>
		]]>
    </string>
    <string name="tips">
<![CDATA[
        	<html>
 			<head></head>
 			<body style="text-align:justify;color:white;background-color:#000000;">
 			<p>Para una mejor convivencia entre todos los asistentes, te sugerimos lo siguiente:</p>
 				<ul>
 					<li>Usa bloqueador y gorra para evitar broncearte mucho.</li>
 					<li>Lentes de sol, aparte de hacerte ver mejor, ayudaran a tu vista.</li>
 					<li>Las camaras digitales de fotograf&iacute;a estan permitidas para tus mejores fotos. <font color="red">NO PROFESIONALES NI DE VIDEO</font></li>
					<li>Ponte de acuerdo con tus amigos para fijar un punto de reuni&oacute;n para verse despu&eacute;s del slam, o por si se separan por bandas diferentes.</li>
 					<li>Evita problemas, <font color="red">NO</font> ingreses con armas de fuego, armas blancas, instrumentos, mochilas, banderas, petardos, comida, bebida o mascotas.</li>
 					<li><font color="#00FFFF">Conoce a mucha gente, y divierte :)</font></li>
 				</ul>
 			</body>
			</html>
		]]>
    </string>

    <!-- Tabs -->
    <string name="tab1">EVENTO</string>
    <string name="tab2">BANDAS</string>

    <!-- Evento -->
    <string name="info_vive">En este año el evento se llevará a cabo los días 14,15,16 y 17 de Marzo, y al igual que en ediciones pasadas tendrá lugar en el Foro Sol. </string>
    <string name="info_vive2">En esta ocasión se agregan dos nuevos escenarios a los ya conocidos, teniendo en total el Escenario Indio, Escenario Unión Indio, Carpa Danup, Carpa Intolerante, Carpa Sonidero Doritos, Carpa Cabo San Roque, Carpa Ambulante.</string>
    <string name="info_vive3">También como es costumbre encontraremos el tianguis cultural del Chopo, merchandise oficial del evento y de las bandas, firma de autografos y muchas cosas más.</string>
    <string name="evento_tab1">INFO</string>
    <string name="evento_tab2">BOLETOS</string>
    <string name="evento_tab3">LUAGR</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_info1">Boletos</string>
    <string name="title_info2">Boletos VIP</string>
    <string name="bol_general">entrada general por día</string>
    <string name="cto_bol_general">$600.00</string>
    <string name="bol_abono">abono general 3 días</string>
    <string name="bol_abono_note">(viernes, sábado y domingo)</string>
    <string name="cto_bol_abono">$1,400.00</string>
    <string name="bol_jueves">boleto único para el jueves</string>
    <string name="cto_bol_jueves">$550.00</string>
    <string name="bol_vip">boleto vip por día</string>
    <string name="cto_bol_vip">$900.00</string>
    <string name="bol_abono_vip">abono vip 3 días</string>
    <string name="cto_bol_abono_vip">$2,000.00</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_banda">Banda</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_por_dia">Bandas por día</string>
    <string name="title_activity_tips">Tips</string>

    <!-- Banda -->
    <string name="add_banda">Agregar recordatorio</string>
    <string name="add_my_bands">Agregar a mis bandas</string>
    <string name="remove_my_bands">Quitar de mis bandas</string>
    <string name="bandN">Banda:</string>
    <string name="dayB">Día:</string>
    <string name="schedule">Hora:</string>
    <string name="place">Escenario:</string>
    <string name="title_activity_mis_bandas">Mis Bandas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sim">Simbologia</string>
	<string name="map1">Escenario</string>
	<string name="map2">Información</string>
	<string name="map3">Servicio médico</string>
	<string name="map4">Comida</string>
	<string name="map5">Merchandise y puntos de interes</string>
	<string name="map6">Tianguis del Chopo</string>
	<string name="map7">Recoleción de vasos</string>
	<string name="map8">Sanitarios</string>
</resources>